[package]
name = "air"
version = "0.2.2"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "A.I.R"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/air.git"


[dependencies]
hex = "0.4.3"
serde = {version = "1.0.202", features=["rc"]}
serde_json = { version = "1.0.117", features = ["raw_value"] }
url = { version = "2.5.0", features = ["serde"] }
chrono = { version="0.4.38", features = ["serde"] }
serde_with = "3.8.1"
rusqlite = {version="0.34.0", features =["serde_json", "bundled"]}
secp256k1 = {version = "0.29.0", features = ["global-context", "serde", "rand-std", "alloc", "rand"]}
async-trait = "0.1.81"
rusqlite_kv = "0.1.0"
easy_secp256k1 = {version = "0.1.0", features=["serde"]}

[features]
default = ["tcp"]
tcp = []
