[package]
name = "air"
version = "1.1.0"
edition = "2024"
authors = ["Caleb Couch <caleb@orange.me>"]
description = "A.I.R"
license = "BSD-3-Clause"
repository = "https://github.com/ramp-stack/air.git"


[dependencies]
hex = "0.4.3"
serde = {version = "1.0.202", features=["rc", "derive"]}
serde_json = { version = "1.0.*", features = ["raw_value"] }
url = { version = "2.5.0", features = ["serde"] }
serde_with = "3.14.0"
rusqlite = {version="0.39.0", features =["serde_json", "bundled"]}
tokio = {version = "1.47.1", features = ["sync", "time", "macros", "rt-multi-thread", "net", "io-util"]}
log = "0.4.29"

chacha20-poly1305 = "0.1.2"
secp256k1 = { version = "0.31.1", features = ["serde", "global-context", "rand", "hashes", "alloc"] }
bitcoin_hashes = "0.20.0"
chrono = "0.4.44"

substance = {path="../substance"}
crossfire = "3.1.7"
tokio-tungstenite = "0.29.0"
futures-util = {version="0.3.32", optional=true}
postcard = {version="1.1.3", features = ["alloc"]}
axum = {version="0.8.9", features=["ws"]}
im = {version="15.1.0", features=["serde"]}
arc-swap = {version="1.9.1", features=["serde"]}

[features]
default = ["stream"]
stream = ["dep:futures-util"]
